# fpga_project

./: .gitignore  CMakeLists.txt  README.md  compile.sn
doc/: .gitignore  CMakeLists.txt  master.tex
module/: dff.v  freq_div.v  jkff.v  mux2_1.v  simple.v  uartrx.v  uarttx.v
test/: CMakeLists.txt  test_dff.v  test_div.v  test_jkff.v  test_mux2_1.v  test_uartrx.v
